Fix toolbar spacing

--- a/src/components/layout/Layout/Header/Toolbar.scss
+++ b/src/components/layout/Layout/Header/Toolbar.scss
@@ -2,7 +2,7 @@
   display: flex;
   padding-top: 17px;
   padding-bottom: 17px;
-  margin-right: 40px;
+  margin-right: 20px;
 
   .btn--icon-only {
     &:not(:last-child) {
